--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install and build 🔧
         run: |
           npm install
-          npm run build
+          vite build
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
